--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     <h1>Git & Github Training</h1>
     <p>for EOWG and WCAG participants, Eric Eggert, 2015-06-29</p>
   </header>
-  <video controls><track label="English" kind="captions" srclang="en" src="captions.vtt" default>
-  <source src="recording.mp4" type='video/mp4'>
-  <source src="recording.webm" type='video/webm'>
+  <video controls poster="poster.png"><track label="English" kind="captions" srclang="en" src="captions.vtt" default>
+    <source src="recording.mp4" type='video/mp4'>
+    <source src="recording.webm" type='video/webm'>
   </video>
   <footer>
     <ul>
