Reorder video files to hopefully resolve Chrome problem

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     <p>for EOWG and WCAG participants, Eric Eggert, 2015-06-29</p>
   </header>
   <video controls poster="poster.png"><track label="English" kind="captions" srclang="en" src="captions.vtt" default>
-    <source src="recording.mp4" type='video/mp4'>
-    <source src="recording.webm" type='video/webm'>
+    <source src="recording.webm" type="video/webm">
+    <source src="recording.mp4" type="video/mp4">
   </video>
   <footer>
     <ul>
